# LExSDKv2

./: CMakeLists.txt
Src/LESDK/: Headers.hpp  Init.hpp
Src/LESDK/Common/: Common.cpp  Core.hpp  FString.hpp  Math.hpp  Misc.hpp  SFXName.hpp  TArray.hpp  TMap.hpp
Src/LESDK/LE1/: Core_classes.hpp  Core_functions.cpp  Engine_classes.hpp
Src/LESDK/LE2/: Core_classes.hpp  Core_functions.cpp  Engine_classes.hpp
Src/LESDK/LE3/: Core_classes.hpp  Core_functions.cpp  Engine_classes.hpp
